# control_barrier_function

./: README.md  pyproject.toml
data/: f_shape_track.csv
notebooks/: cbf_vel_control.ipynb
